--- a/quanlykytuc/quanlykytuc/Areas/Admin/Views/Student/Edit.cshtml
+++ b/quanlykytuc/quanlykytuc/Areas/Admin/Views/Student/Edit.cshtml
@@ -15,6 +15,11 @@
                     <input type="text" class="form-control mb-3" asp-for="StudentID" type="hidden" />
                     <div asp-validation-summary="All"></div>
                     <div class="mb-3">
+                        <label asp-for="StudentCode" class="form-label" for="basic-default-fullname">Mã sinh viên</label>
+                        <input asp-for="StudentCode" type="text" class="form-control" id="basic-default-fullname" placeholder="Nhập mã sinh viên" />
+                        <span asp-validation-for="StudentCode" class="text-danger"></span>
+                    </div>
+                    <div class="mb-3">
                         <label asp-for="Name" class="form-label" for="basic-default-fullname">Họ tên</label>
                         <input asp-for="Name" type="text" class="form-control" id="basic-default-fullname" placeholder="Nhập họ tên" />
                         <span asp-validation-for="Name" class="text-danger"></span>
