--- a/quanlykytuc/quanlykytuc/Views/Infor/Student.cshtml
+++ b/quanlykytuc/quanlykytuc/Views/Infor/Student.cshtml
@@ -33,11 +33,11 @@
                     <div class="row">
                         <div class="mb-3 col-md-6">
                             <label for="firstName" class="form-label">Họ và tên</label>
-                            <input class="form-control" type="text" id="firstName" name="firstName" value=" @Model.Student.Name" readonly>
+                            <input class="form-control" type="text" id="firstName" name="firstName" value="@Model.Student.Name" readonly>
                         </div>
                         <div class="mb-3 col-md-6">
                             <label for="lastName" class="form-label">Mã số sinh viên</label>
-                            <input class="form-control" type="text" name="lastName" id="lastName" value="215748020110371" readonly>
+                            <input class="form-control" type="text" name="lastName" id="lastName" value="@Model.Student.StudentCode" readonly>
                         </div>
                         <div class="mb-3 col-md-6">
                             <label for="email" class="form-label">E-mail</label>
